// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`boxed string > crossSerialize > scoped > supports boxed strings 1`] = `"($R=>$R[0]=Object("\\"hello\\""))($R["example"])"`;

exports[`boxed string > crossSerialize > scoped > supports boxed strings 2`] = `"($R=>$R[0]=Object("\\x3Cscript>\\x3C/script>"))($R["example"])"`;

exports[`boxed string > crossSerialize > supports boxed strings 1`] = `"$R[0]=Object("\\"hello\\"")"`;

exports[`boxed string > crossSerialize > supports boxed strings 2`] = `"$R[0]=Object("\\x3Cscript>\\x3C/script>")"`;

exports[`boxed string > crossSerializeAsync > scoped > supports boxed strings 1`] = `"($R=>$R[0]=$R[0]=Promise.resolve($R[1]=Object("\\"hello\\"")))($R["example"])"`;

exports[`boxed string > crossSerializeAsync > scoped > supports boxed strings 2`] = `"($R=>$R[0]=$R[0]=Promise.resolve($R[1]=Object("\\x3Cscript>\\x3C/script>")))($R["example"])"`;

exports[`boxed string > crossSerializeAsync > supports boxed strings 1`] = `"$R[0]=$R[0]=Promise.resolve($R[1]=Object("\\"hello\\""))"`;

exports[`boxed string > crossSerializeAsync > supports boxed strings 2`] = `"$R[0]=$R[0]=Promise.resolve($R[1]=Object("\\x3Cscript>\\x3C/script>"))"`;

exports[`boxed string > crossSerializeStream > scoped > supports boxed sanitized strings 1`] = `
"($R=>$R[0]=($R[2]=(resolver) => {
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver.p;
})($R[1]={p:0,s:0,f:0}))($R["example"])"
`;

exports[`boxed string > crossSerializeStream > scoped > supports boxed sanitized strings 2`] = `
"($R=>($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=Object("\\x3Cscript>\\x3C/script>")))($R["example"])"
`;

exports[`boxed string > crossSerializeStream > scoped > supports boxed strings 1`] = `
"($R=>$R[0]=($R[2]=(resolver) => {
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver.p;
})($R[1]={p:0,s:0,f:0}))($R["example"])"
`;

exports[`boxed string > crossSerializeStream > scoped > supports boxed strings 2`] = `
"($R=>($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=Object("\\"hello\\"")))($R["example"])"
`;

exports[`boxed string > crossSerializeStream > supports boxed sanitized strings 1`] = `
"$R[0]=($R[2]=(resolver) => {
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver.p;
})($R[1]={p:0,s:0,f:0})"
`;

exports[`boxed string > crossSerializeStream > supports boxed sanitized strings 2`] = `
"($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=Object("\\x3Cscript>\\x3C/script>"))"
`;

exports[`boxed string > crossSerializeStream > supports boxed strings 1`] = `
"$R[0]=($R[2]=(resolver) => {
  resolver.p = new Promise((resolve, reject) => {
    resolver.s = resolve;
    resolver.f = reject;
  });
  return resolver.p;
})($R[1]={p:0,s:0,f:0})"
`;

exports[`boxed string > crossSerializeStream > supports boxed strings 2`] = `
"($R[4]=(resolver, data) => {
  resolver.s(data);
  resolver.p.s = 1;
  resolver.p.v = data;
})($R[1],$R[3]=Object("\\"hello\\""))"
`;

exports[`boxed string > serialize > supports boxed strings 1`] = `"Object("\\"hello\\"")"`;

exports[`boxed string > serialize > supports boxed strings 2`] = `"Object("\\x3Cscript>\\x3C/script>")"`;

exports[`boxed string > serializeAsync > supports boxed strings 1`] = `"Promise.resolve(Object("\\"hello\\""))"`;

exports[`boxed string > serializeAsync > supports boxed strings 2`] = `"Promise.resolve(Object("\\x3Cscript>\\x3C/script>"))"`;

exports[`boxed string > toCrossJSON > supports boxed strings 1`] = `"{"t":21,"i":0,"f":{"t":1,"s":"\\\\\\"hello\\\\\\""}}"`;

exports[`boxed string > toCrossJSON > supports boxed strings 2`] = `"{"t":21,"i":0,"f":{"t":1,"s":"\\\\x3Cscript>\\\\x3C/script>"}}"`;

exports[`boxed string > toCrossJSONAsync > supports boxed strings 1`] = `"{"t":12,"i":0,"s":1,"f":{"t":21,"i":1,"f":{"t":1,"s":"\\\\\\"hello\\\\\\""}}}"`;

exports[`boxed string > toCrossJSONAsync > supports boxed strings 2`] = `"{"t":12,"i":0,"s":1,"f":{"t":21,"i":1,"f":{"t":1,"s":"\\\\x3Cscript>\\\\x3C/script>"}}}"`;

exports[`boxed string > toCrossJSONStream > supports boxed sanitized strings 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`boxed string > toCrossJSONStream > supports boxed sanitized strings 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":4,"s":2},{"t":21,"i":3,"f":{"t":1,"s":"\\\\x3Cscript>\\\\x3C/script>"}}]}"`;

exports[`boxed string > toCrossJSONStream > supports boxed strings 1`] = `"{"t":22,"i":0,"s":1,"f":{"t":26,"i":2,"s":1}}"`;

exports[`boxed string > toCrossJSONStream > supports boxed strings 2`] = `"{"t":23,"i":1,"a":[{"t":26,"i":4,"s":2},{"t":21,"i":3,"f":{"t":1,"s":"\\\\\\"hello\\\\\\""}}]}"`;

exports[`boxed string > toJSON > supports boxed strings 1`] = `"{"t":{"t":21,"i":0,"f":{"t":1,"s":"\\\\\\"hello\\\\\\""}},"f":31,"m":[]}"`;

exports[`boxed string > toJSON > supports boxed strings 2`] = `"{"t":{"t":21,"i":0,"f":{"t":1,"s":"\\\\x3Cscript>\\\\x3C/script>"}},"f":31,"m":[]}"`;

exports[`boxed string > toJSONAsync > supports boxed strings 1`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":21,"i":1,"f":{"t":1,"s":"\\\\\\"hello\\\\\\""}}},"f":31,"m":[]}"`;

exports[`boxed string > toJSONAsync > supports boxed strings 2`] = `"{"t":{"t":12,"i":0,"s":1,"f":{"t":21,"i":1,"f":{"t":1,"s":"\\\\x3Cscript>\\\\x3C/script>"}}},"f":31,"m":[]}"`;
